--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
   <title>Etch-A-Sketch</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
 
   <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
-    <div class="container"></div>
+  <button type="button">Reset Drawing</button>
+  <div id='box'>
+    <div id="container"></div>
+  </div>
 
-    
 
   <script src="script.js"></script>
 </body>
+
 </html>
