--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
 
 <head>
   <meta charset="utf-8">
-
   <title>Etch-A-Sketch</title>
-
   <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
-  <button type="button">Reset Drawing</button>
+  <h1>Etch-A-Sketch!</h1>
+  <button type="button" id="reset">Reset Drawing</button>
   <div id='box'>
     <div id="container"></div>
   </div>
-
 
   <script src="script.js"></script>
 </body>
