--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Etch-A-Sketch!</h1>
-  <button type="button" id="reset">Reset Drawing</button>
+  <button type="button" id="reset">Reset/Resize</button>
   <div id='box'>
     <div id="container"></div>
   </div>
